day 23: add assitant for tasks